test/expected/command_line-error.out
struct S; explain unsigned int
                             ^
1,30: error: declaration expected
